# iceberg-lambda

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
demo/: env.py  stack.py
demo/function/: Dockerfile  app.py  pyproject.toml
nbs/: transform.ipynb
scripts/poetry/: install.sh
